Edit index style

--- a/PersonalWebPage/index.html
+++ b/PersonalWebPage/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <!--Navegation Bar-->
-        <nav class="navbar navbar-expand-lg bg-secondary-subtle">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <!--Site name-->
                 <a class="navbar-brand fw-bold" href="index.html">Seguchi | Dev</a>
@@ -55,7 +55,7 @@
             <span class="badge text-bg-primary">Developer - Java | HTML | CSS | Javascript</span>
 
             <!--Title and subtitle-->
-            <div class="title-subtitle">
+            <div class="title-subtitle margin-content">
                 <h1 class="title">Developer | Code, Create, Innovate</h1>
                 <p class="fs-5 fst-italic">Buildin Solutions, One Line at a Time</p>         
             </div>
@@ -74,11 +74,29 @@
 
         <!--About me-->
         <div class="about-me text-center bg-secondary-subtle">
-            <h1>About me</h1>
-            <p class="fs-5 fst-italic">Buildin Solutions, One Line at a Time</p>
-            <p class="fs-6">Buildin Solutions, One Line at a Time</p>
-            <div>
-                <!--social midias links + call icons from Bootstrap icon-->
+
+          <!--Title and subtitle-->
+          <div class="text-center margin-content">
+            <h1 class="title">About me</h1>
+            <p class="fs-5 fst-italic">My name is Caio Seguchi, and I’m here to be your developer solution.</p>
+          </div>
+
+          <!--Content-->
+          <div class="about-me-content">
+            <p class="fs-6">Hi, Seguchi here!</p>
+            <p class="fs-6">I am a Software Developer with a strong background in Java, HTML, CSS, Bootstrap, JavaScript, MySQL, Spring Boot, and Angular. I recently graduated with a Higher Diploma in Science in Computing from NCI, where I built solid technical expertise and developed a passion for problem-solving through technology.</p>
+            <p class="fs-6">Originally from Brazil, I hold a degree in Mechanical Engineering and have gained diverse experience in different industries:</p>
+            <ul>
+              <li class="fs-6">Consulting Engineer – Focused on machine safety and civil construction with steel.</li>
+              <li class="fs-6">Robotics Teacher – Taught programming and robotics to children, fostering innovation at an early stage.</li>
+              <li class="fs-6">University Professor – Shared knowledge in technical and engineering fields.</li>
+            </ul>
+            <p class="fs-6">My journey brought me to Ireland, where I initially came to study English. What started as a two-year learning experience turned into a career transition into software development, a field I am deeply passionate about.</p>
+            <p class="fs-6">I am excited to apply my engineering mindset, problem-solving skills, and programming expertise to real-world challenges. Let’s build something amazing together!</p>
+            </div>
+
+            <!--social midias links + call icons from Bootstrap icon-->
+            <div class="social-links margin-content">    
             <a href="https://github.com/caioseguchi"><i class="bi bi-github"></i></a>
             <a href="https://www.linkedin.com/in/caio-seguchi-882351232/"><i class="bi bi-linkedin"></i></a>
             </div>
