HTML add profile picture and navbar for all pages

--- a/PersonalWebPage/index.html
+++ b/PersonalWebPage/index.html
@@ -51,24 +51,26 @@
     <!--Main content-->
     <main>
         <!--Presentation-->
-        <div class="presentation text-center">
-            <span class="badge text-bg-primary">Developer - Java | HTML | CSS | Javascript</span>
+        <div class="presentation text-center container-fluid">
+            <div class="container-title">
+                <span class="badge text-bg-primary">Developer - Java | HTML | CSS | Javascript</span>
 
-            <!--Title and subtitle-->
-            <div class="title-subtitle margin-content">
-                <h1 class="title">Developer | Code, Create, Innovate</h1>
-                <p class="fs-5 fst-italic">Buildin Solutions, One Line at a Time</p>         
+                <!--Title and subtitle-->
+                <div class="title-subtitle margin-content">
+                    <h1 class="title">Developer | Code, Create, Innovate</h1>
+                    <p class="fs-5 fst-italic">Buildin Solutions, One Line at a Time</p>         
+                </div>
+                
+                <!--Large buttons-->
+                <div class="button-resume-projects">
+                    <button type="button" class="btn btn-primary btn-lg">Resume</button>
+                    <button type="button" class="btn btn-secondary btn-lg">Projects</button>
+                </div>              
             </div>
             
-            <!--Large buttons-->
-            <div class="button-resume-projects">
-                <button type="button" class="btn btn-primary btn-lg">Resume</button>
-                <button type="button" class="btn btn-secondary btn-lg">Projects</button>
-            </div>
-
             <!--Profile image-->
-            <div class="text-center">
-                <img src="/images/github.png" class="rounded" alt="profile-picture">
+            <div class="text-center margin-content">
+                <img class="profile-image" src="/images/caio-profile.png" class="rounded" alt="profile-picture">
             </div>
         </div>
 
