Add resume content

--- a/PersonalWebPage/pages/resume.html
+++ b/PersonalWebPage/pages/resume.html
@@ -50,6 +50,113 @@
 
     <!--Main content-->
     <main>
+      <!--Title Page Resume-->
+      <div class="title-subtitle margin-content">
+        <h1 class="title">Resume</h1>        
+      </div>
+
+      <!--Experience-->
+      <section>
+        <!--Experience-title-->
+        <div>
+          <h2 class="title">Experence</h2>
+          <button type="button" class="btn btn-primary btn-lg">Resume</button>
+        </div>
+
+        <!-- Experience-card1 -->
+        <div class="card p-3">
+          <div class="card-body d-flex align-items-center">
+            <!-- Card -->
+            <div class="card me-3" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title">2025 - Present</h5>
+                <h6 class="card-subtitle mb-2 text-body-secondary">Developer</h6>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+            <!-- Description -->
+            <p class="mb-0">This is some text within a card body.</p>
+          </div>
+        </div>
+
+        <!-- Experience-card2 -->
+        <div class="card p-3">
+          <div class="card-body d-flex align-items-center">
+            <!-- Card -->
+            <div class="card me-3" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title">2025 - Present</h5>
+                <h6 class="card-subtitle mb-2 text-body-secondary">Developer</h6>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+            <!-- Description -->
+            <p class="mb-0">This is some text within a card body.</p>
+          </div>
+        </div>
+      </section>
+
+      <!--Education-->
+      <section>
+        <!--Education-title-->
+        <div>
+          <h2 class="title">Education</h2>
+          <button type="button" class="btn btn-primary btn-lg">Resume</button>
+        </div>
+
+        <!-- Education-card1 -->
+        <div class="card p-3">
+          <div class="card-body d-flex align-items-center">
+            <!-- Card -->
+            <div class="card me-3" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title">2025 - Present</h5>
+                <h6 class="card-subtitle mb-2 text-body-secondary">Developer</h6>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+            <!-- Description -->
+            <p class="mb-0">This is some text within a card body.</p>
+          </div>
+        </div>
+
+        <!-- Education-card2 -->
+        <div class="card p-3">
+          <div class="card-body d-flex align-items-center">
+            <!-- Card -->
+            <div class="card me-3" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title">2025 - Present</h5>
+                <h6 class="card-subtitle mb-2 text-body-secondary">Developer</h6>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+            <!-- Description -->
+            <p class="mb-0">This is some text within a card body.</p>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="card">
+          <div class="card-body">
+            <h2 class="title">Professional Skills</h2>
+            <span class="badge text-bg-secondary">Secondary</span>
+            <span class="badge text-bg-secondary">Secondary</span>
+            <span class="badge text-bg-secondary">Secondary</span>
+            <span class="badge text-bg-secondary">Secondary</span>
+            <span class="badge text-bg-secondary">Secondary</span>
+            <span class="badge text-bg-secondary">Secondary</span>
+            <h2 class="title">Language</h2>
+            <span class="badge text-bg-secondary">Secondary</span>
+            <span class="badge text-bg-secondary">Secondary</span>
+            <span class="badge text-bg-secondary">Secondary</span>
+            <span class="badge text-bg-secondary">Secondary</span>
+            <span class="badge text-bg-secondary">Secondary</span>
+            <span class="badge text-bg-secondary">Secondary</span>
+          </div>
+        </div>
+      </section>
         
         
     </main>
