Add content contacts and projects

--- a/PersonalWebPage/pages/projects.html
+++ b/PersonalWebPage/pages/projects.html
@@ -50,9 +50,40 @@
 
     <!--Main content-->
     <main>
-        
-        
+      <!--Title page-->
+      <h2 class="title">Education</h2>
+
+      <!--Card-->
+      <div class="card" style="width: 18rem;">
+        <div class="card-body d-flex align-items-center">
+          <div>
+            <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+          <img src="..." class="card-img-top" alt="...">
+        </div>
+      </div>
+
+      <!--Card-->
+      <div class="card" style="width: 18rem;">
+        <div class="card-body d-flex align-items-center">
+          <div>
+            <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+          <img src="..." class="card-img-top" alt="...">
+        </div>
+      </div>
     </main>
+
+    <!--Contact me-->
+    <div>
+      <h1> Let's build something together</h1>
+      <button type="button" class="btn btn-outline-dark">Dark</button>
+
+    </div>
+
+
 </body>
 
 <!--Bootstrap javascript-->
