--- a/PersonalWebPage/pages/resume.html
+++ b/PersonalWebPage/pages/resume.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seguchi | Dev</title>
     <!--CSS Link-->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <!--Bootstrap link-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!--Bootstrap icons-->
@@ -51,91 +51,93 @@
     <!--Main content-->
     <main>
       <!--Title Page Resume-->
-      <div class="title-subtitle margin-content">
+      <div class="title-subtitle margin-content text-center">
         <h1 class="title">Resume</h1>        
       </div>
 
-      <!--Experience-->
-      <section>
-        <!--Experience-title-->
-        <div>
+      <!--Experience Section-->
+      <section class="experience container">
+
+        <!-- Experience Title -->
+        <div class="subtitle-category">
           <h2 class="title">Experence</h2>
-          <button type="button" class="btn btn-primary btn-lg">Resume</button>
+          <button type="button" class="btn btn-primary btn-lg"><i class="bi bi-box-arrow-down"></i> Download Resume</button>
         </div>
 
-        <!-- Experience-card1 -->
-        <div class="card p-3">
-          <div class="card-body d-flex align-items-center">
-            <!-- Card -->
-            <div class="card me-3" style="width: 18rem;">
-              <div class="card-body">
-                <h5 class="card-title">2025 - Present</h5>
-                <h6 class="card-subtitle mb-2 text-body-secondary">Developer</h6>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <!-- Experience Card 1 -->
+        <div class="container">
+          <div class="card shadow p-4 mb-5 border-0">
+            <div class="d-flex flex-column flex-md-row align-items-center">
+               <div class="card me-4" style="width: 18rem;">
+                <div class="card-body">
+                  <h5 class="card-title">2024 - NCI Final Project</h5>
+                  <h6 class="card-subtitle mb-2 text-body-secondary">Developer</h6>
+                  <p class="card-text">The challenge of the final project was to build a fullstack website.</p>
+                </div>
               </div>
+              <p class="mb-0 width-18rem">The project requirements are: two types of users, login system, a database, a search tool and two APIs. Those are the links for the projects: <a href="https://github.com/caioseguchi/project-hotel-dublin-city">Github</a> and <a href="https://hotel-dublin-city-be28be526534.herokuapp.com/">Hotel Dublin City Project</a> (The project will be temporary avaliable online)</p>
             </div>
-            <!-- Description -->
-            <p class="mb-0">This is some text within a card body.</p>
           </div>
-        </div>
+         </div>
+        
 
         <!-- Experience-card2 -->
-        <div class="card p-3">
-          <div class="card-body d-flex align-items-center">
-            <!-- Card -->
-            <div class="card me-3" style="width: 18rem;">
-              <div class="card-body">
-                <h5 class="card-title">2025 - Present</h5>
-                <h6 class="card-subtitle mb-2 text-body-secondary">Developer</h6>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <div class="container">
+          <div class="card shadow p-4 mb-5 border-0">
+            <div class="d-flex flex-column flex-md-row align-items-center">
+               <div class="card me-4" style="width: 18rem;">
+                <div class="card-body">
+                  <h5 class="card-title">2025 - Present</h5>
+                  <h6 class="card-subtitle mb-2 text-body-secondary">Developer</h6>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
               </div>
+              <p class="mb-0">This is some text within a card body.</p>
             </div>
-            <!-- Description -->
-            <p class="mb-0">This is some text within a card body.</p>
           </div>
-        </div>
-      </section>
+         </div>
 
       <!--Education-->
-      <section>
-        <!--Education-title-->
-        <div>
+      <section class="experience container">
+
+        <!-- Education Title -->
+        <div class="subtitle-category">
           <h2 class="title">Education</h2>
-          <button type="button" class="btn btn-primary btn-lg">Resume</button>
+          <button type="button" class="btn btn-primary btn-lg"><i class="bi bi-box-arrow-down"></i> Download Resume</button>
         </div>
 
-        <!-- Education-card1 -->
-        <div class="card p-3">
-          <div class="card-body d-flex align-items-center">
-            <!-- Card -->
-            <div class="card me-3" style="width: 18rem;">
-              <div class="card-body">
-                <h5 class="card-title">2025 - Present</h5>
-                <h6 class="card-subtitle mb-2 text-body-secondary">Developer</h6>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <!-- Education Card 1 -->
+        <div class="container">
+          <div class="card shadow p-4 mb-5 border-0">
+            <div class="d-flex flex-column flex-md-row align-items-center">
+               <div class="card me-4 bg-dark-emphasis" style="width: 18rem;">
+                <div class="card-body">
+                  <h5 class="card-title">2021 - Infraestructure Secretary</h5>
+                  <h6 class="card-subtitle mb-2 text-body-secondary">Engineer</h6>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
               </div>
+              <p class="mb-0">This is some text within a card body.</p>
             </div>
-            <!-- Description -->
-            <p class="mb-0">This is some text within a card body.</p>
           </div>
-        </div>
+         </div>
+        
 
         <!-- Education-card2 -->
-        <div class="card p-3">
-          <div class="card-body d-flex align-items-center">
-            <!-- Card -->
-            <div class="card me-3" style="width: 18rem;">
-              <div class="card-body">
-                <h5 class="card-title">2025 - Present</h5>
-                <h6 class="card-subtitle mb-2 text-body-secondary">Developer</h6>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <div class="container">
+          <div class="card shadow p-4 mb-5 border-0">
+            <div class="d-flex flex-column flex-md-row align-items-center">
+               <div class="card me-4" style="width: 18rem;">
+                <div class="card-body">
+                  <h5 class="card-title">2025 - Present</h5>
+                  <h6 class="card-subtitle mb-2 text-body-secondary">Developer</h6>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
               </div>
+              <p class="mb-0">This is some text within a card body.</p>
             </div>
-            <!-- Description -->
-            <p class="mb-0">This is some text within a card body.</p>
           </div>
-        </div>
-      </section>
+         </div>
 
       <section>
         <div class="card">
