Add Agenda page

--- a/PersonalWebPage/pages/resume.html
+++ b/PersonalWebPage/pages/resume.html
@@ -142,25 +142,20 @@
 
       <!--Main fourth Skills-->
       <section class="container">
-        <!--Language title-->
+        <!--Skills title-->
         <div class="content-project-title">
-          <h1 class="content-project-written-title">Language</h1>
+          <h1 class="content-project-written-title">Skills</h1>
         </div>
 
-        <div class="content-languages">
-
-
+        <!--Skills content-->
+        <div class="content-skills">
+          <p class="card-skills">Java</p>
+          <p class="card-skills">Html</p>
+          <p class="card-skills">CSS</p>
+          <p class="card-skills">JavaScript</p>
+          <p class="card-skills">Boostrap</p>
+          <p class="card-skills">Spring Boot</p>
         </div>
-
-
-      </section>
-
-      <!--Main fifth Background expirences-->
-      <section>
-        <div>
-          <h1 class="content-main-written-title">Background Expirences</h1>
-        </div>
-
       </section>
     </main>
 
