--- a/PersonalWebPage/pages/agenda.html
+++ b/PersonalWebPage/pages/agenda.html
@@ -80,7 +80,19 @@
             <div class="card shadow">
               <div class="card-body">
                 <h5 class="content-secondary-title-project">Contact list</h5>
-                <ul id="listContacts"></ul>
+                <table class="table table-striped">
+                  <thead>
+                    <tr>
+                      <th scope="col">Name</th>
+                      <th scope="col">Number</th>
+                      <th scope="col">Action</th>
+                    </tr>
+                  </thead>
+                  <tbody id="listContacts">
+                    <!--New elements-->
+                  </tbody>
+                </table>
+                
               </div>
             </div>
 
@@ -101,5 +113,5 @@
 
 <!--Bootstrap javascript-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<script src="agendaScript.js"></script>
+<script src="../javascript/agendaScript.js"></script>
 </html>
